// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IngredientGrid basic isLoading snapshot render 1`] = `
<div
  className="sc-AxhCb kAePDU"
>
  <h3>
    fake
  </h3>
  <ul
    className="spinner spinning"
  >
    <li
      className="sc-AxirZ gIiacW"
    >
      F
    </li>
    <li
      className="sc-AxjAm fBOoyb"
    >
      fake_ingredient1
    </li>
    <li
      className="sc-AxjAm fBOoyb"
    >
      fake_ingredient2
    </li>
  </ul>
</div>
`;

exports[`IngredientGrid basic snapshot render 1`] = `
<div
  className="sc-AxhCb kAePDU"
>
  <h3>
    fake
  </h3>
  <ul
    className="spinner"
  >
    <li
      className="sc-AxirZ gIiacW"
    >
      F
    </li>
    <li
      className="sc-AxjAm fBOoyb"
    >
      fake_ingredient1
    </li>
    <li
      className="sc-AxjAm fBOoyb"
    >
      fake_ingredient2
    </li>
  </ul>
</div>
`;
